Issue #2978073: Changed [VMI] Hero content group z-index to 3 for in the hero view mode xlarge

--- a/less/hero/layout/hero-xlarge.less
+++ b/less/hero/layout/hero-xlarge.less
@@ -12,5 +12,6 @@
     left: 5%;
     right: 5%;
     padding: @xsmall-title-font-size;
+    z-index: 3;
   }
 }
